<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Add_Contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAdd"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="Add_photo"
                android:src="@drawable/add_perfil" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enter_lastname" />

            <EditText
                android:id="@+id/lasnameAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/mailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_e_mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/addressAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phoneAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/add" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>